# life

./: LICENSE  README.md  main.cpp  test.ipynb
2020-algorithm-contest/: README.md  gen.bash  zip.bash
2020-algorithm-contest/code/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
2020-algorithm-contest/test-data/1/: 1.in  2.cpp
2020-algorithm-contest/test-data/2/: 1.in  2.in  3.cpp
2020-algorithm-contest/test-data/3/: 4.in
2020-algorithm-contest/test-data/4/: 1.in  2.in  3.cpp
2020-algorithm-contest/test-data/5/: 1.in  2.in  3.in  4.in  5.in
algorithm-contest-2/: README.md  gen.ps1  pack.ps1
algorithm-contest-2/generator/1/: 5.in
algorithm-contest-2/generator/2/: 2.in  3.cpp  4.cpp  5.cpp
algorithm-contest-2/generator/3/: 1.in  2.in  3.in  4.cpp  5.cpp
algorithm-contest-2/generator/4/: 1.in  2.in  3.in  4.cpp  5.cpp  6.cpp
algorithm-contest-2/generator/5/: 1.in  2.in  3.cpp
algorithm-contest-2/solution/: 1.cpp  2.cpp  3.cpp  4.cpp  5-bf.cpp  5.cpp
algorithm-contest-3/: .gitignore  README.md  gen.bash
algorithm-contest-3/code/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
algorithm-contest-3/test-data/1/: 4.in  5.in  6.in
algorithm-contest-3/test-data/2/: 1.in  10.in  11.in  12.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
algorithm-contest-3/test-data/3/: 3.in
algorithm-contest-3/test-data/4/: 4.in  5.cpp  6.cpp  7.cpp  8.cpp
algorithm-contest-3/test-data/5/: 1.in  10.cpp  11.cpp  12.cpp  13.cpp  14.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
algorithm-experiment/: .gitignore  1.1a.cpp  1.1b.cpp  1.1b.csv  1.2.cpp  3.1.cpp  3.2.cpp  5.1a.cpp  5.1b.cpp  5.1c.cpp  5.2a.cpp  5.2b.cpp  CMakeLists.txt
chuanzhi-cup/: .clangd  README.md
chuanzhi-cup/contest/: 1.cpp  2.cpp  3.cpp  4.cpp
chuanzhi-cup/final-contest/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
chuanzhi-cup/practice-contest/: 1.cpp  2.cpp  3.cpp  4.cpp
compile-principle-experiment/1/: hoc.y
compile-principle-experiment/2/: hoc.y  makefile
compile-principle-experiment/3/: lex.l  main.c  main.h  makefile  syn.y
compile-principle-experiment/4/: lex.l  main.c  main.h  makefile  syn.y
computer-graphics-experiment/: 4.cpp  CMakeLists.txt
computer-network-experiment/: .clangd  Base.hpp  CMakeLists.txt  Common.cpp  Common.h  IO.cpp  IO.h  Output.cpp  Output.h  PreConfig.hpp  ReadWriteLock.cpp  ReadWriteLock.h  StringUtil.cpp  StringUtil.hpp  TODO.md  client.cpp  server.cpp
computer-organization-experiment/: Makefile  adder_1.vhdl  adder_32.vhdl  adder_8.vhdl  alu.vhdl  counter_4.vhdl  cpu.vhdl  full_adder_1.vhdl  hdl-prj.json  multiplexer_1_2.vhdl  multiplexer_32_2.vhdl  multiplexer_8_2.vhdl  out.ghw  out.vcd  out2.ghw  register.vhdl  register_file.vhdl  shift_32.vhdl  test_bench.vhdl
cpp-practicum/: .gitignore  Base.hpp  Book.cpp  Book.hpp  CMakeLists.txt  Record.cpp  Record.hpp  StringUtil.cpp  StringUtil.hpp  Vendor.cpp  Vendor.hpp  main.cpp  vcpkg.json
digital-image-process-lab/: .gitignore  CMakeLists.txt  DiscreteFourierTransform.cpp  HarrisCornerDetector.cpp  HistogramEqulization.cpp  MorphologicalTransformation.cpp
gpcp/: .gitignore  GpcpConverter.py  GpcpScrawler.py
information-security-experiment/: CMakeLists.txt  des.cpp  md5.cpp  rsa.cpp
java-practice/javatest/src/javatest/: ArrayDemo2.java  ArrayDemo3.java  E0201.java  E0202.java  E0203.java  E0204.java  Main.java  MethodDemo2.java
java-practice/javatest/src/javatest/e0301/: Circle.java
java-practice/javatest/src/javatest/e0302/: Rational.java  TestRationalClass.java
java-practice/javatest/src/javatest/e0401/: Program.java
java-practice/javatest/src/javatest/e0402/: Person.java
java-practice/javatest/src/javatest/e0501/: Main.java
java-practice/javatest/src/javatest/e0502/: Main.java
java-practice/javatest/src/javatest/e0701/: Main.java
java-practice/javatest/src/javatest/e0702/: Main.java
java-practice/javatest/src/javatest/p0301/: AreaAndLength.java
java-practice/javatest/src/javatest/p0302/: Example.java
java-practice/javatest/src/javatest/p0303/: SunRise.java
java-practice/javatest/src/javatest/p0303/sub/: SquareEquation.java
java-practice/javatest/src/javatest/p0401/: Example.java
java-practice/javatest/src/javatest/p0402/: Subroutine.java
java-practice/javatest/src/javatest/p0403/: Parallelogram.java
java-practice/javatest/src/javatest/p0404/: Quadrangle.java
java-practice/javatest/src/javatest/p0501/: HardWork.java
java-practice/javatest/src/javatest/p0502/: Road.java
java-practice/javatest/src/javatest/p0503/: QuadrangleUseInterface.java
java-practice/javatest/src/javatest/p0701/: StringExample.java
java-practice/javatest/src/javatest/p0702/: DateExample.java
java-practice/javatest/src/javatest/p0703/: BigIntegerExample.java
lanqiao-selection-match/: .gitignore  .rubocop.yml  check-out.rb  cpp-build.rb  cpp-gen-out.rb  java-gen-out.rb  python-gen-out.rb
lanqiao-selection-match/generator/: A-1.in  A-2.in  A-3.in  A.rb  B-1.in  B-2.in  B-3.in  C-1.in  C-2.in  C-3.in  C-4.in  C.rb
linux-run/: .gitignore  Makefile  linux-run-test-bin.cpp  linux-run-test.cpp  linux-run.cpp  linux-run.h
netease-music-convert/: Convert.ps1  README.md
numerical-analysis-lab/: GaussianElimination.cpp  JacobianIteration.cpp
operating-system-challenge/: README.md
operating-system-challenge/1/: README.md  main.cpp
operating-system-challenge/2/: README.md  main.cpp
operating-system-challenge/3/: README.md  main.cpp
operating-system-course-design/: 0001-crupesteam-fat-patch.patch  Vagrantfile  create-file.bash  read-file.c
operating-system-experiment/: .gitignore  Base.h  CMakeLists.txt  DataRaceDemo.cpp  DeadLockDetectionDemo.cpp  DeadLockTestData1.txt  DeadLockTestData2.txt  DeadLockTestData3.txt  DeadLockTestData4.txt  Interlocked.cpp  Interlocked.hpp  InterlockedAvoidDataRaceDemo.cpp  Mutex.cpp  Mutex.h  MutexAvoidDataRaceDemo.cpp  ParallelCalculationDemo.cpp  Semaphore.cpp  Semaphore.h  SemaphoreAvoidDataRaceDemo.cpp  Thread.cpp  Thread.h  main.cpp
question-pptx/: .gitignore  README.md  add-hyperlink.py  choose.txt  gen.ps1  judge.txt  main.py
